--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "node": "^23.7.0"
+    "express-session": "^1.18.1",
+    "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.12.0",
+    "node": "^23.7.0",
+    "nodemon": "^3.1.9",
+    "path": "^0.12.7"
   }
 }
