--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.12.0",
     "node": "^23.7.0",
     "nodemon": "^3.1.9",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.33.5"
   }
 }
