--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": "^23.7.0",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.1"
   }
 }
